<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/mainBackgroundColor"
    tools:context=".FirstFragment">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_group_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:singleSelection="true"
        app:checkedButton="@+id/button_filter_all">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_filter_inprogress"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_ongoing"
            app:icon="@drawable/ic_filter_inprogress" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_filter_all"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_all"
            app:icon="@drawable/ic_filter_all" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_filter_done"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_done"
            app:icon="@drawable/ic_filter_done" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_todo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggle_group_filter"
        tools:listitem="@layout/item_todo" />

</androidx.constraintlayout.widget.ConstraintLayout>
